# Trello-Clone

./: .env.example  .gitignore  CI-README.md  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  ci-cd.yml  pr-ci.yml
backend/: .flake8  Dockerfile  Dockerfile.test  README.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  simple_test.py
backend/apps/authentication/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username.py
backend/apps/projects/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  views.py.backup
backend/apps/projects/migrations/: 0001_initial.py
backend/apps/tasks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_alter_task_unique_together.py
backend/trello_backend/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
database/: init.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  InviteMembersModal.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx  TaskCard.tsx  TaskDetailModal.tsx  TaskList.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: index.ts  useProjects.ts  useTasks.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  ProjectBoardPage.tsx  RegisterPage.tsx  SettingsPage.tsx  index.ts
frontend/src/services/: apiClient.ts  authService.ts  index.ts  projectService.ts  taskService.ts
frontend/src/types/: api.ts  auth.ts  index.ts
frontend/src/utils/: dateUtils.ts  stringUtils.ts
scripts/: init-project.ps1  run-tests.ps1  run-tests.sh
