[project]
name = "trello-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "issyat",email = "ismailaouladtouhami18@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "celery (>=5.5.2,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "channels (>=4.2.2,<5.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
pytest-cov = "^6.0.0"
factory-boy = "^3.3.3"
coverage = "^7.8.2"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    migrations
  | __pycache__
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["apps", "trello_backend"]
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["migrations", "__pycache__", ".venv"]

