[tool.poetry]
name = "trello-backend"
version = "0.1.0"
description = "Trello Clone Backend API"
authors = ["issyat <ismailaouladtouhami18@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
djangorestframework = "^3.16.0"
django-cors-headers = "^4.7.0"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
celery = "^5.5.2"
redis = "^6.2.0"
channels = "^4.2.2"
channels-redis = "^4.2.1"
djangorestframework-simplejwt = "^5.5.0"
pillow = "^11.2.1"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
pytest-cov = "^6.0.0"
factory-boy = "^3.3.3"
coverage = "^7.8.2"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    migrations
  | __pycache__
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["apps", "trello_backend"]
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["migrations", "__pycache__", ".venv"]

